@@ -14,13 +14,8 @@ git clone https://github.com/CaoHuuKhuongDuy/MakeNBreak.git
 Giải nén và để vào thư folder MakeNBreak
 
 ## Build MakeNBreak
-Tới đây ta đã có thể build và run project thông qua 2 cậu lệnh 
-```
-javac --module-path javafx-sdk-23.0.1/lib   --add-modules javafx.controls -d bin src/com.Main.java
-java --module-path javafx-sdk-23.0.1/lib   --add-modules javafx.controls -cp bin com.Main
-```
 
-Nhưng để thuận tiện trong việc code và compile trong project, mình recommend nên cài đặt Make về máy để chạy file Makefile
+Để thuận tiện trong việc code và compile trong project, mình recommend nên cài đặt Make về máy để chạy file Makefile hoặc sử dụng IntelliJ
 ### Hướng dẫn tải Make
 Nếu máy chưa có Homebrew thì dùng câu lệnh dưới này để tải
 ```
